frontend/src/app/components/user-products/user-products.component.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');


.bg-color{
  /*background: linear-gradient(135deg, #646DCC 0%, #C86BC3 100%);*/
  background: #eee;
  padding: 60px 0;
  font-family: 'Roboto', sans-serif;
}

.containers{
  width: 90%;
  margin: 0 auto;
}

.title{
  margin-bottom: 10px;
  padding-bottom: 40px;
  text-align: center;
  position: relative;
}

.title::before{
  content: '';
  width: 200px;
  height: 3px;
  background: #dbdbdb;
  opacity: .6;
  position: absolute;
  bottom: 15%;
  left: 50%;
  transform: translateX(-50%);
}

.title::after{
  content: '\f005';
  font-family: FontAwesome;
  color: #dbdbdb;
  width: 50px;
  height: 20px;
  line-height: 20px;
  position: absolute;
  bottom: 10%;
  left: 50%;
  background: #eee;
  transform: translateX(-50%);
  font-size: 16px;
}

.title p{
  color: #999;
  font-style: italic;
  font-weight: 700;
  margin: 0;
}

.title h1{
  font-size: 44px;
  color: #131313;
  font-weight: 900;
  text-transform: uppercase;
}

.title h1 span{
  color: #646DCC;
}

.card{
  transition: all .2s ease-in-out;
  border-radius: 3px;
  border-radius: 12px;
}

.card-main{
  position: relative;


}

.discount{
  position: relative;
  background: #646DCC;
  font-weight: 700;
  color: #fff;
  text-align: center;
  display: block;
  text-transform: uppercase;
  height: 30px;
  width: 70px;
  border-radius: 0 15px 15px 0;
  line-height: 30px;
  font-style: italic;
  left: -9px;
  top: 30px;
}

.discount::after{
  border-top: 6px solid #646DCC;
  content: '';
  position: absolute;
  bottom: -6px;
  left: 0;
  border-left: 8px solid transparent;
  border-right: 0px solid transparent;
}

.label{
  position: absolute;
  bottom: 84px;
  left: 10px;
  font-size: 10px;
  font-weight: 400;
  text-transform: uppercase;
  z-index: 2;
  line-height: 100%;
  color: #ffffff;
  border-radius: 3px;
  padding: 5px 8px;
}

.label-green{
  background: #1CC198;
}

.label-red{
  background: #D63B4B;
}

.image img{
  width: 100%;
  height: 100%;
}

.cart-line{
  height: 2px;
  background: #eee;
}

.cart-item{
  text-align: center;
  line-height: 45px;
  background: #ffffff;
  transition: all 1s ease-in-out;
  /*opacity: 0;*/
  position: relative;
  top: 0px;
  opacity: .7;
}

.cart-item ul{
  padding: 0;
  margin: 0;
}

.cart-item ul li{
  display: inline-block;
  list-style-type: none;
  position: relative;
}

.cart-item ul li::after{
  content: '';
  width: 1px;
  height: 18px;
  background: rgba(255, 255, 255, .15);
  position: absolute;
  left: -2px;
  top: 10px;
}

.cart-item ul li:first-child:after{
  display: none;
}

.cart-item ul li a{
  padding: 0 18px;
  color: #ccc;
}

.cart-item ul li a:hover{
  color: #9DA1FF;
}

/*.cart:hover .cart-item{
  opacity: 1;
  top: 0;
}*/

.product-container{
  position: absolute;
  right: -40px;
  top: 10px;
  z-index: 4;
  transition: .6s;
  opacity: 0;
}

.p{
  border: 1px solid rgb(233,233,233);
  border-radius: 2px;
  height: 40px;
  width: 40px;
  cursor: pointer;
}

.p img{
  width: 100%;
  height: 100%;
  opacity: .8;
}

.p img:hover{
  opacity: 1;
}

.card:hover .product-container{
  opacity: 1;
  right: 10px;
}

.content{
  padding: 16px 0;
  text-align: center;
}

.content a{
  font-size: 16px;
  color: #555;
  font-weight: 700;
  text-transform: capitalize;
  text-decoration: none;
  transition: all .3s;
}

.content a:hover{
  color: #646DCC;
  text-decoration: none;
}

.rating i{
  color: #fa0;
  line-height: 22px;
  margin: 0 2px;
  font-size: 12px;
}

.content p{
  margin-bottom: 0;
}

.content .money{
  font-size: 20px;
  color: #646DCC;
  font-weight: 700;
  font-style: italic;
  margin-right: 6px;
}

.content .old-price{
  line-height: 18px;
  text-decoration: line-through;
  color: #888;
  font-style: italic;
  font-weight: 400;

}
::ng-deep .custom-modalbox >
mat-dialog-container{
  position: relative;
  top:60px;
  width: 650px;
  height: auto;
}

